@@ -9,7 +9,7 @@
   Algorithms
   <a id="id612473" class="indexterm"/>
 </h2></div></div></div><div class="toc"><p><strong>Table of Contents</strong></p><dl><dt><span class="section"><a href="algorithms.html#std.algorithms.mutating">Mutating</a></span></dt><dd><dl><dt><span class="section"><a href="algorithms.html#algorithms.mutating.swap"><code class="function">swap</code></a></span></dt><dd><dl><dt><span class="section"><a href="algorithms.html#algorithms.swap.specializations">Specializations</a></span></dt></dl></dd></dl></dd></dl></div><p>
-  The neatest accomplishment of the algorithms sect1 is that all the
+  The neatest accomplishment of the algorithms section is that all the
   work is done via iterators, not containers directly.  This means two
   important things:
 </p><div class="orderedlist"><ol class="orderedlist"><li class="listitem"><p>
@@ -31,13 +31,13 @@
   <span class="emphasis"><em>N</em></span> as a size in the examples is to keep things
   easy to read but probably won't be valid code.  You can use wrappers
   such as those described in
-  the <a class="link" href="containers.html" title="Chapter 9.  Containers">containers sect1</a> to keep
+  the <a class="link" href="containers.html" title="Chapter 9.  Containers">containers section</a> to keep
   real code readable.
 </p><p>
   The single thing that trips people up the most is the definition
   of <span class="emphasis"><em>range</em></span> used with iterators; the famous
   "past-the-end" rule that everybody loves to hate.  The
-  <a class="link" href="iterators.html" title="Chapter 10.  Iterators">iterators sect1</a> of this
+  <a class="link" href="iterators.html" title="Chapter 10.  Iterators">iterators section</a> of this
     document has a complete explanation of this simple rule that seems
     to cause so much confusion.  Once you
     get <span class="emphasis"><em>range</em></span> into your head (it's not that hard,
