@@ -23,7 +23,7 @@ classes.
      that <span class="emphasis"><em>pointers</em></span> are
       <span class="emphasis"><em>iterators</em></span>, and that pointers can be used
      whenever an iterator would be.  All those functions in the
-     Algorithms sect1 of the Standard will work just as well on plain
+     Algorithms section of the Standard will work just as well on plain
      arrays and their pointers.
    </p><p>
      That doesn't mean that when you pass in a pointer, it gets
